cabal-version:      3.14
name:               tapl
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Asliddin Abdivasiyev
maintainer:         asliddin.abdivasiyev@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Tapl
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   src
    default-language: GHC2024
